--- a/index.html
+++ b/index.html
@@ -140,17 +140,17 @@
         <div class="experience-tabs">
             <nav class="tab-nav">
                 <button class="tab-button active" onclick="openExperience(event, 'company1')" id="defaultTab">
-                    Company 1
+                    Hue Service Private Limited
                 </button>
                 <button class="tab-button" onclick="openExperience(event, 'company2')">
-                    Company 2
+                    S&IB Services Private Limited
                 </button>
                 <button class="tab-button" onclick="openExperience(event, 'company3')">
-                    Company 3
+                    Fusion CX
                 </button>
-                <button class="tab-button" onclick="openExperience(event, 'company4')">
+        <!--    <button class="tab-button" onclick="openExperience(event, 'company4')">
                     Freelance
-                </button>
+                </button> -->
             </nav>
 
             <!-- Tab Content -->
@@ -158,14 +158,14 @@
                 <!-- Company 1 -->
                 <div id="company1" class="tab-content active">
                     <div class="job-header">
-                        <h3>CyberSecurity Engineer <span class="info-icon">ⓘ</span> <span class="company-name">- Company Name</span></h3>
+                        <h3>CyberSecurity Engineer <span class="info-icon">ⓘ</span> <span class="company-name">- NTPC Talcher Thermal </span></h3>
                         <div class="job-meta">
-                            <span class="date">Jan 2023 - present</span>
-                            <div class="job-links">
+                            <span class="date">Aug 2025 - present</span>
+                    <!--    <div class="job-links">
                                 <a href="#" class="link-icon" title="GitHub">⚙️</a>
                                 <a href="#" class="link-icon" title="Twitter">✖️</a>
                                 <a href="#" class="link-icon" title="Website">🌐</a>
-                            </div>
+                            </div>  -->
                         </div>
                     </div>
                     <p class="job-description">
@@ -176,33 +176,33 @@
                 <!-- Company 2 -->
                 <div id="company2" class="tab-content">
                     <div class="job-header">
-                        <h3>Network Administrator <span class="info-icon">ⓘ</span> <span class="company-name">- Previous Company</span></h3>
+                        <h3>Associate IT Incharge <span class="info-icon">ⓘ</span> <span class="company-name"> </span></h3>
                         <div class="job-meta">
-                            <span class="date">Jan 2022 - Dec 2023</span>
-                            <div class="job-links">
+                            <span class="date">Jun 2025 - Aug 2025</span>
+                        <!--<div class="job-links">
                                 <a href="#" class="link-icon" title="GitHub">⚙️</a>
                                 <a href="#" class="link-icon" title="Website">🌐</a>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                     <p class="job-description">
-                        I worked as a network administrator managing network infrastructure. Responsibilities included troubleshooting connectivity issues, IP address management, and maintaining network security protocols.
+                        In this role, I successfully implemented an Electronic Document Management System (EDMS) and managed Linux system administration across Ubuntu and CentOS environments, ensuring seamless provisioning of systems and services. I specialized in troubleshooting complex Linux infrastructures to maintain optimal system performance and reliability.
                     </p>
                 </div>
 
                 <!-- Company 3 -->
                 <div id="company3" class="tab-content">
                     <div class="job-header">
-                        <h3>IT Support Specialist <span class="info-icon">ⓘ</span> <span class="company-name">- Tech Company</span></h3>
+                        <h3>IT Executive <span class="info-icon">ⓘ</span> <span class="company-name"> </span></h3>
                         <div class="job-meta">
-                            <span class="date">Jun 2020 - Dec 2021</span>
-                            <div class="job-links">
+                            <span class="date">Jul 2024 - Jun 2025</span>
+                        <!--<div class="job-links">
                                 <a href="#" class="link-icon" title="LinkedIn">💼</a>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                     <p class="job-description">
-                        Provided technical support for hardware and software issues. Assisted in maintaining network security and implementing backup solutions.
+                        As an IT Executive, I specialized in comprehensive IT systems management while efficiently handling ticketing and inventory control operations. I collaborated with cross-functional teams to execute small ramp-up projects and optimized network systems to enhance overall business efficiency.
                     </p>
                 </div>
 
