--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>27 Aug 2003</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+              <!--<li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>-->
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 97332 86813</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Bankura, West Bengal, 722203</span></li>
                 </ul>
