--- a/index.html
+++ b/index.html
@@ -302,35 +302,29 @@
           </div>
 
           <div class="col-lg-8">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-              <div class="row gy-4">
-
-                <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
+            <form name="contact" method="POST" netlify netlify-honeypot="bot-field">
+              <!-- Hidden field for spam bots -->
+              <input type="hidden" name="form-name" value="contact">
+              <p class="hidden">
+                <label>Don’t fill this out if you're human: <input name="bot-field"></label>
+              </p>
+            
+              <div class="row">
+                <div class="form-group col-md-6">
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
                 </div>
-
-                <div class="col-md-6 ">
-                  <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
+                <div class="form-group col-md-6">
+                  <input type="email" name="email" class="form-control" id="email" placeholder="Your Email" required>
                 </div>
-
-                <div class="col-md-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
-                </div>
-
-                <div class="col-md-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
-                </div>
-
-                <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-
-                  <button type="submit">Send Message</button>
-                </div>
-
+              </div>
+              <div class="form-group">
+                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+              </div>
+              <div class="text-center">
+                <button type="submit">Send Message</button>
               </div>
             </form>
+            
           </div><!-- End Contact Form -->
 
         </div>
