--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 </svg>
                 <i class="bi bi-cloud-download"></i>
               </div>
-              <a href="#" class="stretched-link">
+              <a href="terabox-downloader.html" class="stretched-link">
                 <h3>TeraBox downloader</h3>
               </a>
               <p>Skip Terabox login, download directly from servers. No data storage, ensuring privacy.</p>
