--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
           </div>
 
           <div class="col-lg-8">
-            <form name="contact" method="POST" data-netlify="true" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form name="contact" method="POST" data-netlify="true" data-aos="fade-up" data-aos-delay="200">
               <!-- Hidden Netlify form-name field -->
               <input type="hidden" name="form-name" value="contact">
               <!-- Optional honeypot for spam protection -->
