--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
             <h2>Subhajit Pal</h2>
             <p>I'm <span class="typed" data-typed-items="CyberSecurity Engineer,Associate IT Incharge,IT Executive">CyberSecurity Engineer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
-              <a href="https://github.com/MR990SU"><i class="bi bi-github"></i></a>
-              <a href="http://www.linkedin.com/in/subhajit-pal-b6001623a"><i class="bi bi-linkedin"></i></a>
-              <a href="https://www.facebook.com/share/1FmHaLw9gc/"><i class="bi bi-facebook"></i></a>
-              <a href="https://www.instagram.com/subhajitpal7860?igsh=MTd0cXh4bGd5MXl0Ng=="><i class="bi bi-instagram"></i></a>
+              <a href="https://github.com/MR990SU" target="_blank"><i class="bi bi-github"></i></a>
+              <a href="http://www.linkedin.com/in/subhajit-pal-b6001623a" target="_blank"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.facebook.com/share/1FmHaLw9gc/" target="_blank"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/subhajitpal7860?igsh=MTd0cXh4bGd5MXl0Ng==" target="_blank"><i class="bi bi-instagram"></i></a>
             </div>
           </div>
         </div>
